--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,13 @@ git:
   depth: 3
 script:
   - yarn build
+notifcations:
+  email:
+    recipents:
+      - jorge.jaime@protonmail.coms
+      - trakadev@gmail.com
+    on_success: always
+    on_failure: always  
 deploy:
   provider: pages
   skip-cleanup: true
