--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - yarn build
 notifcations:
   email:
-    recipents:
+    reciepients:
       - jorge.jaime@protonmail.coms
       - trakadev@gmail.com
     on_success: always
